--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mysten/dapp-kit": "^0.14.50",
     "@mysten/sui": "^1.21.2",
     "@suiet/wallet-kit": "^0.3.4",
+    "@tanstack/react-query": "^5.66.0",
     "dotconfig": "0.0.1-security",
     "next": "15.1.6",
     "react": "^19.0.0",
